# toy-gpu

./: CMakeLists.txt  README.md  test.toy  toyc.cpp
include/toy/: Passes.h  Passes.td
mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp
